--- a/BrutalAPI.csproj
+++ b/BrutalAPI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="brutalapi" />
+    <None Remove="testsound.wav" />
     <None Remove="Textures\BasicPartyMember\BasicPartyMemberBack.png" />
     <None Remove="Textures\BasicPartyMember\BasicPartyMemberFront.png" />
     <None Remove="Textures\BasicPartyMember\BasicPartyMemberLocked.png" />
@@ -16,11 +17,37 @@
     <None Remove="Textures\Deformung\DeformungCombat.png" />
     <None Remove="Textures\Deformung\DeformungCorpse.png" />
     <None Remove="Textures\Deformung\DeformungOverworld.png" />
+    <None Remove="Textures\GuttedIcon.png" />
+    <None Remove="Textures\Mana\Blue\ManaBlue.png" />
+    <None Remove="Textures\Mana\Blue\ManaCostBlue.png" />
+    <None Remove="Textures\Mana\Blue\ManaCostSelectedBlue.png" />
+    <None Remove="Textures\Mana\Blue\ManaUsedBlue.png" />
+    <None Remove="Textures\Mana\Gray\ManaCostGray.png" />
+    <None Remove="Textures\Mana\Gray\ManaCostSelectedGray.png" />
+    <None Remove="Textures\Mana\Gray\ManaGray.png" />
+    <None Remove="Textures\Mana\Gray\ManaUsedGray.png" />
     <None Remove="Textures\Mana\GreenMana.png" />
     <None Remove="Textures\Mana\GreenManaCostSelected.png" />
     <None Remove="Textures\Mana\GreenManaCostUnselected.png" />
     <None Remove="Textures\Mana\GreenManaHealth.png" />
     <None Remove="Textures\Mana\GreenManaUsed.png" />
+    <None Remove="Textures\Mana\Green\GreenMana.png" />
+    <None Remove="Textures\Mana\Green\GreenManaCostSelected.png" />
+    <None Remove="Textures\Mana\Green\GreenManaCostUnselected.png" />
+    <None Remove="Textures\Mana\Green\GreenManaHealth.png" />
+    <None Remove="Textures\Mana\Green\GreenManaUsed.png" />
+    <None Remove="Textures\Mana\Purple\ManaCostPurple.png" />
+    <None Remove="Textures\Mana\Purple\ManaCostSelectedPurple.png" />
+    <None Remove="Textures\Mana\Purple\ManaPurple.png" />
+    <None Remove="Textures\Mana\Purple\ManaUsedPurple.png" />
+    <None Remove="Textures\Mana\Red\ManaCostRed.png" />
+    <None Remove="Textures\Mana\Red\ManaCostSelectedRed.png" />
+    <None Remove="Textures\Mana\Red\ManaRed.png" />
+    <None Remove="Textures\Mana\Red\ManaUsedRed.png" />
+    <None Remove="Textures\Mana\Yellow\ManaCostSelectedYellow.png" />
+    <None Remove="Textures\Mana\Yellow\ManaCostYellow.png" />
+    <None Remove="Textures\Mana\Yellow\ManaUsedYellow.png" />
+    <None Remove="Textures\Mana\Yellow\ManaYellow.png" />
     <None Remove="Textures\Mungbertino\Brace.png" />
     <None Remove="Textures\Mungbertino\Chew.png" />
     <None Remove="Textures\Mungbertino\MungbertinoBack.png" />
@@ -37,10 +64,12 @@
     <None Remove="Textures\Mungbert\MungbertUnlocked.png" />
     <None Remove="Textures\Mungbert\MungMeUp.png" />
     <None Remove="Textures\Mungbert\MungRootBeer.png" />
+    <None Remove="Textures\StunIcon.png" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="brutalapi" />
+    <EmbeddedResource Include="testsound.wav" />
     <EmbeddedResource Include="Textures\BasicPartyMember\BasicPartyMemberBack.png" />
     <EmbeddedResource Include="Textures\BasicPartyMember\BasicPartyMemberFront.png" />
     <EmbeddedResource Include="Textures\BasicPartyMember\BasicPartyMemberLocked.png" />
@@ -49,11 +78,32 @@
     <EmbeddedResource Include="Textures\Deformung\DeformungCombat.png" />
     <EmbeddedResource Include="Textures\Deformung\DeformungCorpse.png" />
     <EmbeddedResource Include="Textures\Deformung\DeformungOverworld.png" />
-    <EmbeddedResource Include="Textures\Mana\GreenMana.png" />
-    <EmbeddedResource Include="Textures\Mana\GreenManaCostSelected.png" />
-    <EmbeddedResource Include="Textures\Mana\GreenManaCostUnselected.png" />
-    <EmbeddedResource Include="Textures\Mana\GreenManaHealth.png" />
-    <EmbeddedResource Include="Textures\Mana\GreenManaUsed.png" />
+    <EmbeddedResource Include="Textures\GuttedIcon.png" />
+    <EmbeddedResource Include="Textures\Mana\Blue\ManaBlue.png" />
+    <EmbeddedResource Include="Textures\Mana\Blue\ManaUsedBlue.png" />
+    <EmbeddedResource Include="Textures\Mana\Blue\ManaCostBlue.png" />
+    <EmbeddedResource Include="Textures\Mana\Blue\ManaCostSelectedBlue.png" />
+    <EmbeddedResource Include="Textures\Mana\Gray\ManaCostGray.png" />
+    <EmbeddedResource Include="Textures\Mana\Gray\ManaCostSelectedGray.png" />
+    <EmbeddedResource Include="Textures\Mana\Gray\ManaGray.png" />
+    <EmbeddedResource Include="Textures\Mana\Gray\ManaUsedGray.png" />
+    <EmbeddedResource Include="Textures\Mana\Green\GreenMana.png" />
+    <EmbeddedResource Include="Textures\Mana\Green\GreenManaCostSelected.png" />
+    <EmbeddedResource Include="Textures\Mana\Green\GreenManaCostUnselected.png" />
+    <EmbeddedResource Include="Textures\Mana\Green\GreenManaHealth.png" />
+    <EmbeddedResource Include="Textures\Mana\Green\GreenManaUsed.png" />
+    <EmbeddedResource Include="Textures\Mana\Purple\ManaCostPurple.png" />
+    <EmbeddedResource Include="Textures\Mana\Purple\ManaCostSelectedPurple.png" />
+    <EmbeddedResource Include="Textures\Mana\Purple\ManaPurple.png" />
+    <EmbeddedResource Include="Textures\Mana\Purple\ManaUsedPurple.png" />
+    <EmbeddedResource Include="Textures\Mana\Red\ManaCostRed.png" />
+    <EmbeddedResource Include="Textures\Mana\Red\ManaCostSelectedRed.png" />
+    <EmbeddedResource Include="Textures\Mana\Red\ManaRed.png" />
+    <EmbeddedResource Include="Textures\Mana\Red\ManaUsedRed.png" />
+    <EmbeddedResource Include="Textures\Mana\Yellow\ManaCostSelectedYellow.png" />
+    <EmbeddedResource Include="Textures\Mana\Yellow\ManaCostYellow.png" />
+    <EmbeddedResource Include="Textures\Mana\Yellow\ManaYellow.png" />
+    <EmbeddedResource Include="Textures\Mana\Yellow\ManaUsedYellow.png" />
     <EmbeddedResource Include="Textures\Mungbertino\Brace.png" />
     <EmbeddedResource Include="Textures\Mungbertino\Chew.png" />
     <EmbeddedResource Include="Textures\Mungbertino\MungbertinoBack.png" />
@@ -70,6 +120,11 @@
     <EmbeddedResource Include="Textures\Mungbert\MungbertUnlocked.png" />
     <EmbeddedResource Include="Textures\Mungbert\MungMeUp.png" />
     <EmbeddedResource Include="Textures\Mungbert\MungRootBeer.png" />
+    <EmbeddedResource Include="Textures\StunIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AssetsTools.NET" Version="2.0.12" />
   </ItemGroup>
 
   <ItemGroup>
@@ -84,6 +139,9 @@
     </Reference>
     <Reference Include="FMODUnity">
       <HintPath>..\..\Files 2\Folders\BO Modding References\FMODUnity.dll</HintPath>
+    </Reference>
+    <Reference Include="Marosi.SerializableCollections">
+      <HintPath>..\..\Steam\steamapps\common\Brutal Orchestra\BrutalOrchestra_Data\Managed\Marosi.SerializableCollections.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_Assembly-CSharp">
       <HintPath>..\..\Files 2\Folders\BO Modding References\MMHOOK_Assembly-CSharp.dll</HintPath>
@@ -109,11 +167,17 @@
     <Reference Include="UnityEngine.AssetBundleModule">
       <HintPath>..\..\Files 2\Folders\BO Modding References\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>..\..\Steam\steamapps\common\Brutal Orchestra\BrutalOrchestra_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\Files 2\Folders\BO Modding References\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ImageConversionModule">
       <HintPath>..\..\Files 2\Folders\BO Modding References\UnityEngine.ImageConversionModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>..\..\Steam\steamapps\common\Brutal Orchestra\BrutalOrchestra_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ParticleSystemModule">
       <HintPath>..\..\Files 2\Folders\BO Modding References\UnityEngine.ParticleSystemModule.dll</HintPath>
